Fixed listing detail padding on mobile

--- a/components/listings/listing_detail/ListingDetail/ListingDetail.module.css
+++ b/components/listings/listing_detail/ListingDetail/ListingDetail.module.css
@@ -1,10 +1,12 @@
+@value smallAndUp from '../../../../styles/breakpoints.module.css';
+
 .listingDetail {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
   max-width: 50rem;
   margin: 0 auto;
-  padding: 1rem 0 2rem 0;
+  padding: 1rem 1rem 2rem 1rem;
 }
 
 .status {
@@ -23,4 +25,10 @@
   font-size: 1.5rem;
   font-weight: 600;
   margin-top: 0.3rem;
+}
+
+@media smallAndUp {
+  .listingDetail {
+    padding: 1rem 0 2rem 0;
+  }
 }
